--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+
+
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light bg-nav">
             <a class="navbar-brand" href="#"><img src="images/logo.png" alt=""></a>
@@ -37,14 +40,205 @@
 
 
 
+    <div class="container">
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <div class="row">
+                    <div class="col-md-6 d-flex justify-content-center align-items-center">
+                        <div>
+                            <h3>Macbook Pro</h3>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate sed eum commodi doloremque dicta? Nobis inventore expedita dignissimos vitae officiis.</p>
+                            <button class="buy-now-btn">BUY NOW →</button>
+                        </div>
+                    </div>
+                    <div class="col-md-6">   
+                      <img src="images/banner-products/product-1.png" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="row">
+                    <div class="col-md-6 d-flex justify-content-center align-items-center">
+                        <div>
+                            <h3>Macbook Pro</h3>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate sed eum commodi doloremque dicta? Nobis inventore expedita dignissimos vitae officiis.</p>
+                            <button class="buy-now-btn">BUY NOW →</button>
+                        </div>
+                    </div>
+                    <div class="col-md-6">   
+                      <img src="images/banner-products/slider-1.png" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="row">
+                    <div class="col-md-6 d-flex justify-content-center align-items-center">
+                        <div>
+                            <h3>Macbook Pro</h3>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate sed eum commodi doloremque dicta? Nobis inventore expedita dignissimos vitae officiis.</p>
+                            <button class="buy-now-btn">BUY NOW →</button>
+                        </div>
+                    </div>
+                    <div class="col-md-6">   
+                      <img src="images/banner-products/slider-3.png" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+    </div>
 
 
 
 
 
 
+    <div class="container">
+        <div class="d-flex justify-content-between">
+            <h4>Smartphone</h4>
+            <a class="orange-cl" href="#">See All</a>
+        </div>
+
+        <div class="card-deck">
+            <div class="card">
+              <img src="images/phone/phone-2.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">iPhone 11 Pro</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              </div>
+              <div class="card-footer">
+                <h5>$999</h5>
+                <button class="buy-now-btn">BUY NOW →</button>
+              </div>
+            </div>
+
+            <div class="card">
+              <img src="images/phone/phone-3.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Samsung Galaxy Note10+</h5>
+                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              </div>
+              <div class="card-footer">
+                <h5>$799</h5>
+                <button class="buy-now-btn">BUY NOW →</button>
+              </div>
+            </div>
+
+            <div class="card">
+              <img src="images/phone/phone-1.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Redmi Note 8</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+              </div>
+              <div class="card-footer">
+                <h5>$699</h5>
+                <button class="buy-now-btn">BUY NOW →</button>
+              </div>
+            </div>
+          </div>
+    </div>
 
 
+
+
+
+
+    <div class="container">
+        <div class="d-flex justify-content-between">
+            <h4>Laptop</h4>
+            <a class="orange-cl" href="#">See All</a>
+        </div>
+
+        <div class="card-deck">
+            <div class="card">
+              <img src="images/laptop/product-1.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Asus VivoBook</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              </div>
+              <div class="card-footer">
+                <h5>$999</h5>
+                <button class="buy-now-btn">BUY NOW →</button>
+              </div>
+            </div>
+
+            <div class="card">
+              <img src="images/laptop/product-2.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Razer Blade 15</h5>
+                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              </div>
+              <div class="card-footer">
+                <h5>$2799</h5>
+                <button class="buy-now-btn">BUY NOW →</button>
+              </div>
+            </div>
+
+            <div class="card">
+              <img src="images/laptop/product-3.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Xiaomi Mi Notebook Pro</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+              </div>
+              <div class="card-footer">
+                <h5>$999</h5>
+                <button class="buy-now-btn">BUY NOW →</button>
+              </div>
+            </div>
+          </div>
+    </div>
+
+
+
+
+    <div class="container categories">
+        <div class="cat-head">
+            <h4>Categories</h4>
+            <p>__</p>
+        </div>
+        <div class="row">
+            <div class="col-md-3 d-flex justify-content-center align-items-center">
+               <div class="cat">
+                <img src="images/Categories/bag.png" alt="">
+                <h4>Bag</h4>
+               </div>
+            </div>
+            <div class="col-md-3">
+                <div class="row">
+                    <div class="cat" >
+                     <img src="images/Categories/perfume.png" alt="">
+                     <h4>Beauty</h4>
+                    </div>
+                </div>
+                <br>
+                <br>
+                 <div class="row">
+                      <div class=" cat">
+                         <img src="images/Categories/shoe.png" alt="">
+                         <h4>Shoes</h4>
+                      </div>
+                </div>
+                </div>
+                
+            <div class="col-md-6">
+                <img src="images/Categories/pale-order.png" alt="">
+            </div>
+        </div>
+    </div>
 
 
 
