--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
     <div class="container categories">
         <div class="cat-head">
             <h4>Categories</h4>
-            <p>__</p>
+            <div class="cat-underline"></div>
         </div>
         <div class="row">
             <div class="col-md-3 d-flex justify-content-center align-items-center">
@@ -219,7 +219,7 @@
             </div>
             <div class="col-md-3">
                 <div class="row">
-                    <div class="cat" >
+                    <div class="cat">
                      <img src="images/Categories/perfume.png" alt="">
                      <h4>Beauty</h4>
                     </div>
