--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     
 
 
-
+  <div class="bg">
     <div class="container">
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
@@ -51,7 +51,7 @@
               <div class="carousel-item active">
                 <div class="row">
                     <div class="col-md-6 d-flex justify-content-center align-items-center">
-                        <div>
+                        <div class="car-pad">
                             <h3>Macbook Pro</h3>
                             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate sed eum commodi doloremque dicta? Nobis inventore expedita dignissimos vitae officiis.</p>
                             <button class="buy-now-btn">BUY NOW →</button>
@@ -65,8 +65,8 @@
               <div class="carousel-item">
                 <div class="row">
                     <div class="col-md-6 d-flex justify-content-center align-items-center">
-                        <div>
-                            <h3>Macbook Pro</h3>
+                        <div class="car-pad">
+                            <h3>Echo Plus </h3>
                             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate sed eum commodi doloremque dicta? Nobis inventore expedita dignissimos vitae officiis.</p>
                             <button class="buy-now-btn">BUY NOW →</button>
                         </div>
@@ -79,8 +79,8 @@
               <div class="carousel-item">
                 <div class="row">
                     <div class="col-md-6 d-flex justify-content-center align-items-center">
-                        <div>
-                            <h3>Macbook Pro</h3>
+                        <div class="car-pad">
+                            <h3>JBL Speaker</h3>
                             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate sed eum commodi doloremque dicta? Nobis inventore expedita dignissimos vitae officiis.</p>
                             <button class="buy-now-btn">BUY NOW →</button>
                         </div>
@@ -101,7 +101,7 @@
             </a>
           </div>
     </div>
-
+  </div>
 
 
 
